--- a/educa/courses/templates/base.html
+++ b/educa/courses/templates/base.html
@@ -26,11 +26,13 @@
             {% block content %}
             {% endblock %}
         </div>
+        {% block include_js %}
+        {% endblock %}
         <script>
             document.addEventListener('DOMContentLoaded', (event) => {
             // DOM-модель загружена
-            {% block domready %}
-            {% endblock %}
+                {% block domready %}
+                {% endblock %}
             })
         </script>
     </body>
