--- a/educa/students/templates/students/course/detail.html
+++ b/educa/students/templates/students/course/detail.html
@@ -1,5 +1,7 @@
 {% extends "base.html" %}
 
+{% load cache %}
+
 {% block title %}
 {{ object.title }}
 {% endblock %}
@@ -27,11 +29,13 @@
     </ul>
 </div>
 <div class="module">
+    {% cache 600 module_contents module}
     {% for content in module.contents.all %}
     {% with item=content.item %}
     <h2>{{ item.title }}</h2>
     {{ item.render }}
     {% endwith %}
     {% endfor %}
+    {% endcache %}
 </div>
 {% endblock %}
